# OpenEnv-Autonomous-DataOps-RL

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  testing_sample.csv  ui.py
env/: baseline.py  environment.py  grader.py  models.py  tasks.py
server/: app.py
tests/: test_api_contract.py  test_grader_and_rewards.py
