[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataops-rl-env"
version = "0.1.0"
description = "OpenEnv DataOps environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "pandas",
  "numpy",
  "openai",
  "requests",
  "streamlit"
]

[project.scripts]
server = "server.app:main"
